resources/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Niramit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,400;1,500;1,600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components{
    .my-form-input{
        @apply bg-gray-300 focus:border-primary-600 focus:ring-primary-600 font-semibold text-gray-900 shadow-sm sm:text-sm w-full;
    }

    .my-navbar-link{
        @apply flex justify-center items-center text-center h-full hover:no-underline; 
    }

    .my-navbar-link-mobile{
        @apply flex mt-1 px-2 py-2 rounded items-center text-center h-full hover:no-underline;
    }

    .invalid-input{
        @apply bg-red-300 border-red-400 focus:border-red-500 focus:ring-red-500;
    }

    .my-link{
        @apply text-primary-300 hover:text-primary-500 underline focus:outline-none focus:ring-1 focus:ring-primary-500;
    }

    .my-btn{
        @apply flex justify-center py-1.5 px-8 rounded-sm shadow text-white border border-none bg-primary-400 hover:bg-primary-600 focus:outline-none focus:ring-primary-600 focus:ring-2 focus:ring-offset-1;
    }

    .my-btn-small{
        @apply text-white text-xs bg-gray-500 p-1 border border-transparent hover:bg-gray-700 focus:outline-none focus:ring-gray-600 focus:ring-1 focus:ring-offset-2;
    }
}

